// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card components renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 gxtGbS"
  >
    Heading
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 cyIVmL"
  >
    Content
  </div>
</article>
`;

exports[`Card components renders without crashing when types are not passed 1`] = `
<article
  className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
>
  <header
    className="Card__CardHeader-sc-1prdgex-1 jVbTxc"
  >
    Heading
  </header>
  <div
    className="Card__CardContent-sc-1prdgex-2 cyIVmL"
  >
    Content
  </div>
</article>
`;
